--- a/public/index.html
+++ b/public/index.html
@@ -2,11 +2,20 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link rel="icon" href="/favicon/favicon.ico" />
     <meta
-      name="description"
-      content="Web site created using create-snowpack-app"
+      name="viewport"
+      content="minimum-scale=1, initial-scale=1, width=device-width"
+    />
+    <meta name="description" content="Audit - where workflows come together" />
+    <!-- material-ui font -->
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
     />
     <style>
       html,
@@ -56,7 +65,7 @@
           monospace;
       }
     </style>
-    <title>Snowpack App</title>
+    <title>Audit™</title>
   </head>
   <body>
     <div id="root"></div>
