feat: init checklist

--- a/public/index.html
+++ b/public/index.html
@@ -20,7 +20,6 @@
     <style>
       html,
       body {
-        background-color: #282c34;
         width: 100vw;
         height: 100vh;
       }
@@ -35,7 +34,7 @@
       #load_gear_c {
         transition: 300ms;
         opacity: 1;
-        width: 10vw;
+        width: 15vw;
         position: absolute;
         top: 50%;
         left: 50%;
@@ -48,7 +47,7 @@
         animation-timing-function: linear;
       }
       #load_gear path {
-        fill: white;
+        fill: #282c34;
       }
 
       body {
